# Catkin_Ws

./: .gitignore  .zshrc:wq
devel/: .catkin  _setup_util.py
devel/lib/: libmushr_ackermann_plugin.dylib
devel/lib/pkgconfig/: ackermann_msgs.pc  my_racecar.pc  myrobot2_description.pc  myrobot2_gazebo.pc
devel/share/ackermann_msgs/cmake/: ackermann_msgs-msg-extras.cmake  ackermann_msgs-msg-paths.cmake  ackermann_msgsConfig.cmake
devel/share/my_racecar/cmake/: my_racecarConfig.cmake
devel/share/myrobot2_description/cmake/: myrobot2_descriptionConfig.cmake
devel/share/myrobot2_gazebo/cmake/: myrobot2_gazeboConfig.cmake
devel/share/roseus/ros/ackermann_msgs/: manifest.l
install/: _setup_util.py  setup.sh
install/lib/pkgconfig/: my_racecar.pc  myrobot2_description.pc  myrobot2_gazebo.pc
install/share/ackermann_msgs/cmake/: ackermann_msgsConfig.cmake
install/share/myrobot2_gazebo/: package.xml
install/share/myrobot2_gazebo/cmake/: myrobot2_gazeboConfig.cmake
src/: CMakeLists.txt
src/myrobot2_description/: CMakeLists.txt
src/myrobot2_description/meshes/: converted_buddy_mushr_wheel_ffffffff.mtl
src/myrobot2_description/urdf/: racecar.urdf
src/myrobot2_gazebo/: CMakeLists.txt
src/myrobot2_gazebo/launch/: myrobot2.launch
src/myrobot2_gazebo/plugins/: mushr_ackermann_plugin.cpp
src/myrobot2_gazebo/scripts/: ekf_node.py  ground_truth.py  teleop.py
